--- a/src/CartFile/Cart.css
+++ b/src/CartFile/Cart.css
@@ -83,6 +83,33 @@
     padding: 1%;
 }
 
+.LogintoBuybtn{
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: rgb(223, 156, 156);
+    width: 40%;
+}
+.LogintoBuybtn:hover{
+    background-color: rgb(81, 214, 203);
+    color: whitesmoke;
+    width: 50%;
+    box-shadow: 5px 4px 8px rgb(67, 56, 56);
+}
+
+.LogOutBTN{
+    width: 100%;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: steelblue;
+}
+
+.LogOutBTN:hover{
+    height: 40px;
+    background-color: rgb(70, 165, 180);
+    color: antiquewhite;
+    font-size: 18px;
+}
 
 @media Only screen and (min-width: 200px) and (max-width: 750px) {
     
