--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -205,7 +205,8 @@ li:hover{
     }
 
     .forresponsive{
-        padding-top: 60px;
+        padding-top: 0px;
+        padding-bottom: 10px;
     }
 }
 
