--- a/src/CartFile/Cart.css
+++ b/src/CartFile/Cart.css
@@ -111,6 +111,14 @@
     font-size: 18px;
 }
 
+
+.cartempty{
+    background-image: url("https://limasy.com/img/empty-animation1.gif");
+    width: auto;
+    height: 290px;
+    background-repeat: no-repeat;
+}
+
 @media Only screen and (min-width: 200px) and (max-width: 750px) {
     
     .middle-box {
@@ -136,6 +144,7 @@
         width: 100%;        
         box-shadow: 0px 0px 0px 0px gray;
         margin: auto;
+        padding-bottom: 10px;
     }
 
     .cartimg{
